src/components/Charts/ArtistPie/ArtistPie.module.css
.mainContainer {
    max-height: 800px;
    padding-top:8%;
    display: flex;
    flex-direction: column;
    gap: 14px;
}

.dataLink { 
    text-align: center;
}

.dataLink >a {
    color: var(--berry);
    border-bottom: 1px solid var(--berry);
}

.dataLink >a:hover{
    color: var(--blue);
    border-bottom: 1px solid var(--blue);
}

.chartContainer {
    max-height: 500px;
    display:flex;
    flex-direction:column;
    align-items:center;
    box-shadow: 0 0 1px var(--berry);
}

.mainContainer h4 {
    display:flex;
    justify-content:center;
    gap: 0.25em;
    width:100%;
}

.mainContainer p {
    display:flex;
    padding-top:4%;
    padding-bottom: 15%;
}

/* Tablet Size (iPad Air) */
@media only screen and (max-width: 900px) {
    .mainContainer {
        max-width: 800px;
    }

    .mainContainer p {
        padding-bottom: 18%;
    }
  }
 
/* Mobile Size (iPhone 12 Pro) */
@media only screen and (max-width: 600px) {
    .mainContainer {
        padding-bottom: 55%;
    }
    .mainContainer >h2 {
        font-size: var(--medium-font);
    }
    .mainContainer h4 {
        font-size: var(--medium-font);
    }
    .mainContainer >p {
        font-size: 10px;
        padding-bottom: 0;
    }
    .chartContainer {
        max-width: 450px;
        max-height:450px;
    }
}

